# Source/swaggerOpt.json
@@ -61,7 +61,7 @@
         "tags": [
           "Receitas"
         ],
-        "description": "Retorna a receita a partir do ID informado",
+        "description": "Retorna a receita a partir do ID da receita informado",
         "parameters": [
           {
             "name": "idReceita",
@@ -87,15 +87,46 @@
         }
       }
     },
-    "/Receitas/Busca": {
+    "/Receitas/BuscaPorTitulo": {
       "get": {
         "tags": [
           "Receitas"
         ],
-        "description": "Busca receitas pelo título",
+        "description": "Busca receitas por seu título",
         "parameters": [
           {
             "name": "tituloReceita",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/Receitas/BuscaPorCategoria": {
+      "get": {
+        "tags": [
+          "Receitas"
+        ],
+        "description": "Busca receitas por sua categoria",
+        "parameters": [
+          {
+            "name": "idCategoria",
             "in": "query",
             "schema": {
               "type": "string"
@@ -136,6 +167,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -372,6 +406,113 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/codigo": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/codigo/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
